# metal-treeshap

./: .gitignore  CHANGELOG.md  CMakeLists.txt  NOTICE  README.md  RELEASING.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
benchmarks/: benchmark_mac.py  phase2_cpu_shap.py  phase2_cpu_xgboost.py  phase2_power.py  phase2_run.py  phase2_schema.json  phase2_workloads.py  realdata_schema.json
benchmarks/results/: phase21_m4max_20260712_summary.json  phase2_m4max_20260712_summary.json  realdata_m4max_20260712_summary.json
benchmarks/results/phase21_m4max_20260712_raw/: multiclass_cpu_xgboost_312.json  stress_atomic_finalists.json  stress_atomic_tiling.json  stress_cpu_shap.json  stress_cpu_xgboost_330.json  stress_deterministic_kahan.json  treeshap_tested.metal  wide_cpu_xgboost_312.json  wide_multiclass_modes.json
benchmarks/results/phase2_m4max_20260712_raw/: cpu_xgboost_final.json  hot_repeatability.json  hot_tuning.json  stress_atomic_ab_final.json  stress_atomic_full.json  stress_deterministic_final.json  stress_fast_modes_final.json  stress_tuning.json  treeshap_tested.metal
benchmarks/results/phase2_m4max_20260712_raw/row_sweep/: metal_1.json  metal_128.json  metal_2048.json  metal_32.json  metal_512.json  metal_8.json  metal_8192.json
bindings/: python_module.cpp
ci/: check_metal.swift  verify_dist.py
docs/: 01-cuda-acceleration-assessment.md  02-apple-gpu-project-proposal.md  03-phase2-deterministic-design.md  04-phase2-performance-results.md  05-phase21-production-results.md  06-v0.1-release-validation.md  07-local-program-completion.md  how-it-works.md  performance.md
examples/: 01-quickstart.ipynb  02-cpu-vs-gpu-benchmark.ipynb  03-accumulation-modes.ipynb  README.md
include/metal_treeshap/: deterministic.h  paths.h  preprocess.h
python/metal_treeshap/: __init__.py  explainer.py
reference/: reference_shap.h
shaders/: treeshap.metal
src/: csv_io.h  main_benchmark.cpp  main_metal.cpp  main_reference.cpp  metal_host.hpp
tests/: RESULTS.md  test_csv_io.cpp  test_deterministic_plan.cpp  test_extract_paths.py  test_fixture.py  test_metal_cli.py  test_metal_host.cpp  test_phase2_tools.py  test_preprocess.cpp  test_property_additivity.cpp  test_python_api.py  test_python_package.py  test_python_source.py  test_reference_cli.py  test_vs_xgboost.py
tests/fixtures/binary-depth6/: X.csv  expected_contribs.csv  meta.json  model.json
tests/fixtures/dart/: X.csv  expected_contribs.csv  meta.json  model.json
tests/fixtures/dart-xgb33/: X.csv  expected_contribs.csv  meta.json  model.json
tests/fixtures/deep31/: X.csv  expected_contribs.csv  meta.json  paths.csv
tests/fixtures/missing-only-path/: X.csv  expected_contribs.csv  meta.json  model.json
tests/fixtures/multiclass-3/: X.csv  expected_contribs.csv  meta.json  model.json
tests/fixtures/parallel-trees/: X.csv  expected_contribs.csv  meta.json  model.json
tests/fixtures/regression-missing/: X.csv  expected_contribs.csv  meta.json  model.json
tools/: extract_paths.py  make_deep_fixture.py
