[build-system]
requires = [
  "scikit-build-core>=1.0,<2",
  "nanobind>=2.4,<3",
]
build-backend = "scikit_build_core.build"

[project]
name = "metal-treeshap"
dynamic = ["version"]
description = "TreeSHAP inference accelerated by Apple GPUs through Metal"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "metal-treeshap contributors" }]
dependencies = ["numpy>=1.24"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: MacOS :: MacOS X",
  "Programming Language :: C++",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Typing :: Typed",
]

[project.urls]
Homepage = "https://github.com/tunguz/metal-treeshap"
Documentation = "https://github.com/tunguz/metal-treeshap#readme"
Issues = "https://github.com/tunguz/metal-treeshap/issues"
Source = "https://github.com/tunguz/metal-treeshap"

[project.optional-dependencies]
xgboost = ["xgboost>=2.0"]
test = [
  "pytest>=8",
  "xgboost>=2.0",
  "scikit-learn>=1.3",
  "jsonschema>=4.20",
]

[tool.scikit-build]
minimum-version = "build-system.requires"
wheel.packages = ["python/metal_treeshap"]
build.targets = ["_native"]
sdist.include = [
  "bindings/**",
  "include/**",
  "python/metal_treeshap/*.py",
  "python/metal_treeshap/py.typed",
  "shaders/treeshap.metal",
  "src/metal_host.hpp",
  "third_party/metal-cpp/**",
  "tools/extract_paths.py",
  "CMakeLists.txt",
  "CHANGELOG.md",
  "LICENSE",
  "NOTICE",
  "README.md",
  "RELEASING.md",
]
[[tool.dynamic-metadata]]
provider = "scikit_build_core.metadata.regex"
field = "version"
input = "python/metal_treeshap/__init__.py"

[tool.scikit-build.cmake.define]
METAL_TREESHAP_BUILD_PYTHON = true
CMAKE_OSX_ARCHITECTURES = "arm64"
CMAKE_OSX_DEPLOYMENT_TARGET = "13.0"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
